# tic_tac_toe

./: .gitignore  LICENSE  README.md
python/: pyproject.toml
python/src/tic_tac_toe/: main.py
src/: main.rs
